# App-privada-ps-

./: app.py  generar.csv  pyproject.toml
src/core/: __init__.py  database.py  insertar_info.py
src/core/methods/: configuracionMethod.py  cuotaMethod.py  disciplinaMethod.py  permisoMethod.py  personalMethod.py  rolMethod.py  socioMethod.py
src/core/models/: configuracion.py  cuota.py  disciplina.py  permisos.py  personal.py  rol.py  socio.py
src/web/: __init__.py  config.py  forms.py
src/web/controllers/: apis.py  auth.py  configuracion.py  cuotas.py  disciplinas.py  personal.py  socios.py
src/web/helpers/: auth.py  handlers.py  permisos.py
src/web/templates/: home.html  index.html  layout.html  lista_users.html  login_form.html  signup_form.html
src/web/templates/auth/: login.html
src/web/templates/config/: config.html
src/web/templates/disciplinas/: agregar_disciplina_form.html  disciplina_card.html  disciplinas.html  modificar_disciplina.html
src/web/templates/personal/: agregar_personal_form.html  modificar_personal.html  personal.html  personal_card.html
src/web/templates/socios/: agregar_socio_form.html  inscripcion_disciplina.html  modificar_socio.html  socio2.html  socio_card.html  socios.html
