[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Juan Fazzano <juanmafazzano@gmail.com>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
psycopg2-binary = "^2.9.3"
Flask-SQLAlchemy = "^2.5.1"
Flask-WTF = "^1.0.1"
email-validator = "^1.3.0"
pdfkit = "^1.0.0"
fpdf = "^1.7.2"
Flask-Cors = "^3.0.10"
Flask-JWT-Extended = "^4.4.4"
qrcode = "^7.3.1"
urlextract = "^1.7.1"
Pillow = "^9.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
